content/v1.4.5/en/api/campaign/DefaultArmyManagementCalculationModel.md
---
title: "DefaultArmyManagementCalculationModel"
description: "Auto-generated class reference for DefaultArmyManagementCalculationModel."
---
# DefaultArmyManagementCalculationModel

**Namespace:** TaleWorlds.CampaignSystem.GameComponents
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class DefaultArmyManagementCalculationModel : ArmyManagementCalculationModel`
**Base:** `ArmyManagementCalculationModel`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.GameComponents/DefaultArmyManagementCalculationModel.cs`

## Overview

`DefaultArmyManagementCalculationModel` is a rule model that usually defines how a subsystem should compute things. Modders most often customize behavior by replacing or subclassing it.

## Mental Model

Treat `DefaultArmyManagementCalculationModel` as a Model-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Methods

### DailyBeingAtArmyInfluenceAward
`public override float DailyBeingAtArmyInfluenceAward(MobileParty armyMemberParty)`

**Purpose:** **Purpose:** Executes the DailyBeingAtArmyInfluenceAward logic.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.DailyBeingAtArmyInfluenceAward(armyMemberParty);
```

### CalculatePartyInfluenceCost
`public override int CalculatePartyInfluenceCost(MobileParty armyLeaderParty, MobileParty party)`

**Purpose:** **Purpose:** Calculates the current value or result of party influence cost.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CalculatePartyInfluenceCost(armyLeaderParty, party);
```

### CanLordCreateArmy
`public override bool CanLordCreateArmy(MobileParty mobileParty, out MBList<MobileParty> possibleArmyMembers)`

**Purpose:** **Purpose:** Checks whether the this instance meets the preconditions for lord create army.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CanLordCreateArmy(mobileParty, possibleArmyMembers);
```

### CalculateTotalInfluenceCost
`public override int CalculateTotalInfluenceCost(Army army, float percentage)`

**Purpose:** **Purpose:** Calculates the current value or result of total influence cost.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CalculateTotalInfluenceCost(army, 0);
```

### GetPartySizeScore
`public override float GetPartySizeScore(MobileParty party)`

**Purpose:** **Purpose:** Reads and returns the party size score value held by the this instance.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.GetPartySizeScore(party);
```

### CalculateDailyCohesionChange
`public override ExplainedNumber CalculateDailyCohesionChange(Army army, bool includeDescriptions = false)`

**Purpose:** **Purpose:** Calculates the current value or result of daily cohesion change.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CalculateDailyCohesionChange(army, false);
```

### CalculateNewCohesion
`public override int CalculateNewCohesion(Army army, PartyBase newParty, int calculatedCohesion, int sign)`

**Purpose:** **Purpose:** Calculates the current value or result of new cohesion.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CalculateNewCohesion(army, newParty, 0, 0);
```

### GetCohesionBoostInfluenceCost
`public override int GetCohesionBoostInfluenceCost(Army army, int percentageToBoost = 100)`

**Purpose:** **Purpose:** Reads and returns the cohesion boost influence cost value held by the this instance.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.GetCohesionBoostInfluenceCost(army, 0);
```

### GetPartyRelation
`public override int GetPartyRelation(Hero hero)`

**Purpose:** **Purpose:** Reads and returns the party relation value held by the this instance.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.GetPartyRelation(hero);
```

### CanPlayerCreateArmy
`public override bool CanPlayerCreateArmy(out TextObject disabledReason)`

**Purpose:** **Purpose:** Checks whether the this instance meets the preconditions for player create army.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CanPlayerCreateArmy(disabledReason);
```

### CheckPartyEligibility
`public override bool CheckPartyEligibility(MobileParty party, out TextObject explanation)`

**Purpose:** **Purpose:** Verifies whether party eligibility holds true for the this instance.

```csharp
// Obtain an instance of DefaultArmyManagementCalculationModel from the subsystem API first
DefaultArmyManagementCalculationModel defaultArmyManagementCalculationModel = ...;
var result = defaultArmyManagementCalculationModel.CheckPartyEligibility(party, explanation);
```

## Usage Example

```csharp
Game.Current.ReplaceModel<DefaultArmyManagementCalculationModel>(new MyDefaultArmyManagementCalculationModel());
```

## See Also

- [Area Index](../)